 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 */

VERSION 1.0.3
  - the red '-' can now even remove whole directories (after asking)

  - fixed build.xml, so that docs are now included
  
  - slight speedup in treehandling (made most members static)
  
  - project files are colored according to the setting of the filesystem browser

  - toolbar is now JToolBar and has roll-over buttons

  - removed deprecation warning (updated to jEdit 4.0 dockable API)
  
  - sorted extensions in import-sample.properties
  
  - added CVS policy file

  - Project parsing does not start at jEdit start up unless the the viewer is
    set to be displayed on start up.

  - Fixed NPE when a click occurs over a non-node port of project tree

  - Added 'py' (Python) extension to supported import extensions

  - Project directories are now sorted

  - Double click interval have been shortened from 2 seconds to .5 seconds


VERSION 1.0.2

  - Major rewrite of the plugin.  All features that existed pre 1.0.2 should still be
    valid, except for the bugs.  That also means that all previously noted changes
    may or may not be valid in this release.
    
  - Added drag and drop support to the edit pane.
  
  - Fixed bugs with tree node synchonization where the different tree views are
    not notified of changes such as additions and removal of project files, and
    the opening and closing or project files in the edit pane.
    
  - Tree rendering on file and directory additions should be faster because the
    trees are not being rebuilt on these events.
    
  - Project viewer will ask if you want to import a file if you save it under
    the current project's root directory.
    