@@ -1,16 +1,0 @@
-<html>
-<head>
-   <title>ProjectViewer Plugin</title>
-</head>
-
-<body>
-
-<p><font size=+2>ProjectViewer</font></p>
-
-<font size="+1">Calvin Yu, Stefan Kost</font><br>
-<font size="+1">Legal Notice</font><br>
-Permission is granted to copy, distribute and/or modify this document under the terms of the GNU Free Documentation License, Version 1.1 or any later version published by the Free Software Foundation; with no "Invariant Sections", "Front-Cover Texts" or "Back-Cover Texts", each as defined in the license. A copy of the license can be found in the file COPYING.DOC.txt included with jEdit.
-<hr>
-
-</body>
-</html>
