@@ -1,0 +1,119 @@
+<?xml version="1.0"?>
+
+<!-- ProjectViewer plugin user's guide -->
+<!-- (C) 2001,2002 Stefan Kost, Calvin Yui -->
+
+<!DOCTYPE book PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN"
+  "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd">
+
+<book>
+
+
+<bookinfo>
+    <title>ProjectViewer plugin</title>
+
+    <authorgroup>
+        <author>
+            <firstname>Stefan</firstname>
+            <surname>Kost</surname>
+        </author>
+        <author>
+            <firstname>Calvin</firstname>
+            <surname>Yu</surname>
+        </author>
+    </authorgroup>
+
+    <legalnotice>
+        <title>Legal Notice</title>
+
+        <para>
+        Permission is granted to copy, distribute and/or modify this
+        document under the terms of the GNU Free Documentation License,
+        Version 1.1 or any later version published by the
+        Free Software Foundation; with no
+        <quote>Invariant Sections</quote>,
+        <quote>Front-Cover Texts</quote> or
+        <quote>Back-Cover Texts</quote>,
+        each as defined in the license.
+        A copy of the license can be found in the file
+        <filename>COPYING.DOC.txt</filename> included with jEdit.
+        </para>
+    </legalnotice>
+</bookinfo>
+
+
+<chapter id="presentation">
+    <title>Presentation</title>
+
+    <para>
+	The ProjectViewer plugin allows to define group of files as projects.
+    </para>
+
+</chapter>
+
+
+<chapter id="customization">
+    <title>Customization</title>
+
+    <para>
+    It is not yet possible to customize the ProjectViewer.
+    </para>
+</chapter>
+
+
+<chapter id="license">
+    <title>License</title>
+
+    <para>
+    The source code is distributed under the GPL.
+    Please see
+    <ulink url="http://www.fsf.org/copyleft/gpl.html">
+        http://www.fsf.org/copyleft/gpl.html
+    </ulink>
+    </para>
+</chapter>
+
+
+<chapter id="feedback">
+    <title>Feedback</title>
+
+    <para>
+    The preferred way to send bug reports is to use the
+    Sourceforge Bug Tracker at
+    <ulink url="http://sourceforge.net/bugs/?group_id=588">
+        http://sourceforge.net/bugs/?group_id=588
+    </ulink>
+    </para>
+
+    <para>You can also write to:</para>
+    <itemizedlist>
+        <listitem>
+            Stefan Kost <email>ensonic@sonicpulse.de</email>;
+        </listitem>
+
+        <listitem>
+            or jEdit-users mailing-list
+            <email>jedit-users@lists.sourceforge.net</email>;
+        </listitem>
+
+        <listitem>
+            or jEdit-devel mailing-list
+            <email>jedit-devel@lists.sourceforge.net</email>.
+        </listitem>
+    </itemizedlist>
+</chapter>
+
+
+<chapter id="credits">
+    <title>Credits</title>
+
+    <itemizedlist>
+        <listitem>
+            ProjectViewer was originally developed and maintained by Calvin Yu
+        </listitem>
+
+    </itemizedlist>
+</chapter>
+
+
+</book>
