@@ -2,9 +2,9 @@
 plugin.projectviewer.ProjectPlugin.name=Project Viewer
 plugin.projectviewer.ProjectPlugin.author=Stefan Kost, Calvin Yu
 plugin.projectviewer.ProjectPlugin.version=1.0.3
-plugin.projectviewer.ProjectPlugin.docs=index.html
+plugin.projectviewer.ProjectPlugin.docs=users-guide.html
 
-plugin.projectviewer.ProjectViewer.depend.0=jedit 03.01.99.00
+plugin.projectviewer.ProjectViewer.depend.0=jedit 04.00.99.00
 plugin.projectviewer.ProjectViewer.depend.1=jdk 1.2
 
 projectviewer.title=Project
