@@ -15,6 +15,8 @@
  */
 
 VERSION 1.0.3
+  - initial user documentation (using docbook-xsl) 
+  
   - the red '-' can now even remove whole directories (after asking)
 
   - fixed build.xml, so that docs are now included
